[metadata]
name = mkblog
author = Jean-Denis Gebhardt
author_email = projects@der-jd.de
description = MkDocs plugin for blogging
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/derJD/python-mkblog
license = MIT
classifiers =
  Environment :: Console
  Intended Audience :: System Administrators
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  License :: OSI Approved :: MIT
  Topic :: System :: Systems Administration
  Topic :: Utilities

[options]
packages = find:
package_dir =
  = src
install_requires =
  mkdocs>=1

python_requires = >=3.6
setup_requires =
  setuptools_scm

[options.packages.find]
where = src

[options.entry_points]
mkdocs.plugins =
    mkblog = mkblog.plugin:MkBlog